Add form.hidden_tag() to all forms - edit, login, change-password, make-post, post, profile - about notes. For register csrf token included.

--- a/website/templates/auth/change_password.html
+++ b/website/templates/auth/change_password.html
@@ -9,6 +9,7 @@
              <main class="form-signin">
                 <h2 class="h3 mb-3 fw-normal text-center">Change your password</h2>
                 <p>Using bootstrap-WTForms. Learning how to style.</p>
+                    {{ form.hidden_tag() }}
                     {{ render_form(form, button_style='btn btn-outline-primary w-100 btn btn-lg') }}
              </main> <br>
         <div class="col-md-6">
